--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,14 @@
-add_subdirectory(base)
-add_subdirectory(dram)
+
 # add_subdirectory(mem_controller)
 
-target_sources(
-  kimulator-exe
-  PRIVATE 
-  main.cpp
+add_executable(KT-exe main.cpp)
+set_target_properties(
+    KT-exe
+  PROPERTIES 
+  OUTPUT_NAME kimulator
 )
+
+add_subdirectory(base)
+add_subdirectory(dram)
+
+target_link_libraries(KT-exe PRIVATE base yaml-cpp)
