--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -1,14 +1,17 @@
-add_library(kimulator-base OBJECT)
-set_target_properties(kimulator-base PROPERTIES LINKER_LANGUAGE CXX)
+add_library(base OBJECT)
+set_target_properties(base PROPERTIES LINKER_LANGUAGE CXX)
+target_include_directories(base PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 
 target_sources(
-  kimulator-base PRIVATE
-  param.h 
+  base PRIVATE
+  param.h utils.h exception.h 
+
+  utils.cpp
 )
 
 target_link_libraries(
-  kimulator
+  kt_lib_shared
   PRIVATE
-  kimulator-base
+  base
 )
