--- a/src/dram/CMakeLists.txt
+++ b/src/dram/CMakeLists.txt
@@ -1,15 +1,17 @@
-add_library(kimulator-dram OBJECT)
+add_library(dram OBJECT)
+set_target_properties(dram PROPERTIES LINKER_LANGUAGE CXX)
+target_include_directories(dram PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
 
 target_sources(
-  kimulator-dram PRIVATE
+  dram PRIVATE
   dram.h 
   spec.h 
 
   impl/DDR4.cpp
 )
-
 target_link_libraries(
-  kimulator
-  PRIVATE
-  kimulator-dram
+  kt_lib_shared
+  PRIVATE 
+  dram
 )
